mathutils.noise.voronoi Memory leak #54966

Closed
opened 2018-05-05 23:02:21 +02:00 by TimZ · 5 comments

System Information
Windows 10

Blender Version
Broken: v2.79b

Short description of error
Python API:
mathutils.noise.voronoi causes an increase in memory when called repeatedly. mathutils.noise.noise does not have this problem.

Exact steps for others to reproduce the error
voronoi_memory_leak.blend

  • Open the blend file
  • Copy and paste the code in the text file to the console
  • Run test_noise with a large value for n (e.g. 1,000,000)
  • Run test_voronoi with the same value and observe the increase in memory usage
**System Information** Windows 10 **Blender Version** Broken: v2.79b **Short description of error** Python API: mathutils.noise.voronoi causes an increase in memory when called repeatedly. mathutils.noise.noise does not have this problem. **Exact steps for others to reproduce the error** [voronoi_memory_leak.blend](https://archive.blender.org/developer/F3278235/voronoi_memory_leak.blend) - Open the blend file - Copy and paste the code in the text file to the console - Run test_noise with a large value for n (e.g. 1,000,000) - Run test_voronoi with the same value and observe the increase in memory usage
Author

Added subscriber: @BlenderTim

Added subscriber: @BlenderTim

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, fix incoming.

Confirmed, fix incoming.
Bastien Montagne self-assigned this 2018-05-07 11:06:26 +02:00

This issue was referenced by blender/blender@a3b4c3823c

This issue was referenced by blender/blender@a3b4c3823ca7e16e6414a1dc39454a18fddb8e77

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#54966
No description provided.