Fix T54966: mathutils.noise.voronoi Memory leak

C code was not correctly handling release of temp data, not technically
a memory leak, but indeed rather annoying bug! ;)